con Podcast React

--- a/data/hola-mundo.mdx
+++ b/data/hola-mundo.mdx
@@ -5,4 +5,6 @@ date: '2021-08-01'
 
 # Hola Mundo
 
-Hola, Primer post de BuceApp
+Hola, Primer post de BuceApp y nuestro podcast:
+
+<Podcast episode = "5Q4nsJMjFaqpQVJsR5rkOF"/>
